[package]
name = "ud-api"
version = "0.1.0"
authors = ["Jason Crouse <jcrouse@drift.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
elastic = "*"
elastic_derive = "*"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
