[package]
name = "ud-api"
version = "0.1.0"
authors = ["Jason Crouse <jcrouse@drift.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dotenv = "0.15.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "async" }
elasticsearch = "7.6.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.2"
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "async" }
async-trait = "0.1.24"